--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Kyle Emler | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Kyle Emler | WDD 130 </h1>
+        <img src="images/profile.jpg" alt="Kyle Emler" width="200">
+        <p>My name is Kyle Emler. I'm from Broken Arrow, Oklahoma. I have a beautiful wife named
+            Sarah and sweet 3 year-old princess named Emmie.</p>
+    </main>
+    <footer>
+        <p>&copy; 2026 * Kyle Emler * Oklahoma, United States</p>
+    </footer>
 </body>
+
 </html>
