--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML stucture example using semantic HTML elements">
+    <meta name="author" content="Kyle Emler">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Basic Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ui>
+            <li><a href="https://skin-by-sarah-101130.square.site/">Skin By Sarah</a></li>
+            <li><a href="https://www.costcotravel.com/">Costco Travel</a></li>
+        </ui>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, aspernatur.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, aspernatur?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore voluptas beatae
+                aliquam. Voluptate, dolores?</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/asuncion-paraguay/800x500/11-1f575ca13f6742254a243463136e3e1f15f11669.jpeg"
+          alt="Sealing Room" width="200">
+    </aside>
+    <footer>
+        <p>Kyle Emler</p>
+    </footer>
 </body>
+
 </html>
