w02 home page enhancement

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <p>My name is Kyle Emler. I'm from Broken Arrow, Oklahoma. I have a beautiful wife named
             Sarah and sweet 3 year-old princess named Emmie.</p>
     </main>
+    <aside>
+        <h2>Oklahoma</h2>
+        <img src="week02/images/oklahoma-state-outline.png" alt="image of Oklahoma state outline">
+        <p>Oklahoma is located near the center of the United States, and a key visual cue is the
+            distinct 'panhandle' that sticks out of the left side of the state.</p>
+    </aside>
     <footer>
         <p>&copy; 2026 * Kyle Emler * Oklahoma, United States</p>
     </footer>
