--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyle Emler | WDD 130</title>
+    <meta name="description"
+      content="Homepage for information regarding Kyle Emler, his family and where he lives. Oklahoma.">
+    <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
