changes for w03 code along

--- a/index.html
+++ b/index.html
@@ -16,18 +16,42 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">LinkedIn</a>
+            <a href="https://facebook.com">FaceBook</a>
         </nav>
     </header>
     <main>
         <h1>Kyle Emler | WDD 130 </h1>
         <img src="images/profile.jpg" alt="Kyle Emler" width="200">
-        <p>My name is Kyle Emler. I'm from Broken Arrow, Oklahoma. I have a beautiful wife named
-            Sarah and sweet 3 year-old princess named Emmie.</p>
+        <p>My name is Kyle Emler. I'm from Broken Arrow, Oklahoma. I have a beautiful wife
+            named Sarah and sweet 3 year-old princess named Emmie. I work for T-Mobile
+            selling their
+            new service T-Fiber.
+            I've always worked in telecom in some capacity and have really loved helping
+            people get
+            better internet for less money.
+            I served a mission in the Salt Lake City South Mission from 2016-2018 and
+            thought I was
+            for sure going to move back to Utah and spend the rest of my life there.
+            Instead I started pathway in 2018 and met my wife through pathway, she lived in
+            the same
+            area as me.
+            We got married in 2019 and have never wanted to move to Utah.
+        </p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/oklahoma-city-oklahoma-temple?lang=eng"
+                  target="_blank">Oklahoma City, Oklahoma Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng"
+                  target="_blank">Salt Lake Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng"
+                  target="_blank">Provo City Center Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Oklahoma</h2>
         <img src="week02/images/oklahoma-state-outline.png" alt="image of Oklahoma state outline">
-        <p>Oklahoma is located near the center of the United States, and a key visual cue is the
+        <p>Oklahoma is located near the center of the United States, and a key visual cue is
+            the
             distinct 'panhandle' that sticks out of the left side of the state.</p>
     </aside>
     <footer>
