--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <img src="images/profile.jpg" alt="Kyle Emler" width="200">
         <p>My name is Kyle Emler. I'm from Broken Arrow, Oklahoma. I have a beautiful wife
             named Sarah and sweet 3 year-old princess named Emmie. I work for T-Mobile
-            selling their
-            new service T-Fiber.
+            selling their new service T-Fiber.
             I've always worked in telecom in some capacity and have really loved helping
             people get
             better internet for less money.
