--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Information for a Rafting Website">
-    <meta name="Author" content="Kyle Emler">
+    <meta name="description"
+      content="Information for a Rafting Website, with links to book a trip and see stories from other people.">
+    <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>Emler Rafting LLC</title>
+    <title>About Us | Emler Rafting LLC</title>
 </head>
 
 <body>
@@ -15,9 +16,9 @@
         <img src="images/logo.jpg" alt="logo" width="200">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
     <main>
