--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,11 +8,11 @@
       content="Information for a Rafting Website, with links to book a trip and see stories from other people.">
     <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About Us | Emler Rafting LLC</title>
+    <title>About Us | White Water Rafting LLC</title>
 </head>
 
 <body>
-    <header>
+    <header class="site-header">
         <img src="images/logo.jpg" alt="logo" width="200">
         <nav>
             <a href="index.html">Home</a>
@@ -24,7 +24,8 @@
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="photo of people rafting">
-            <h1>Emler Rafting LLC</h1>
+            <h1>White Water Rafting LLC</h1>
+
             <article>
                 <img src="images/happy-person.jpg" alt="photo of happy person">
                 <p>
@@ -35,15 +36,55 @@
                     deleniti temporibus vitae minus in quisquam labore commodi sunt delectus.
                 </p>
             </article>
-            <section>
+            <section class="history">
                 <h2>History</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto labore, assumenda
-                    tenetur neque commodi expedita modi maxime dicta. Unde
-                </p>
+
+                <div class="history-container">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto labore,
+                        assumenda
+                        tenetur neque commodi expedita modi maxime dicta. Unde
+                    </p>
+                    <img src="images/history-image.jpg" alt="History Image">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad provident
+                        voluptates
+                        cumque repudiandae tenetur soluta tempore commodi hic nisi. A minus, ad
+                        neque
+                        nostrum magni consequuntur expedita molestias atque cum architecto quia ea
+                        ullam. Repudiandae tempore eveniet placeat nihil nesciunt.
+                    </p>
+                </div>
             </section>
-            <section>
+            <section class="adventure">
                 <h2>Adventure Awaits You!</h2>
+
+                <div class="adventure-pics">
+                    <figure>
+                        <img src="images/adv-pic-one.jpg" alt="caption1">
+                        <figcaption>Education</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="images/adv-pic-two.jpg" alt="caption1">
+                        <figcaption>Build Connections</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="images/adv-pic-four.jpg" alt="caption1">
+                        <figcaption>Training</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="images/adv-pic-three.jpg" alt="caption1">
+                        <figcaption>Chart Your Course</figcaption>
+                    </figure>
+
+                    <figure>
+                        <img src="images/adv-pic-five.jpg" alt="caption1">
+                        <figcaption>Shred some Rapids</figcaption>
+                    </figure>
+                </div>
             </section>
         </div>
     </main>
