--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,6 @@
         <div class="hero">
             <img src="images/hero.jpg" alt="photo of people rafting">
             <h1>White Water Rafting LLC</h1>
-
             <article>
                 <img src="images/happy-person.jpg" alt="photo of happy person">
                 <p>
@@ -38,14 +37,13 @@
             </article>
             <section class="history">
                 <h2>History</h2>
-
                 <div class="history-container">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto labore,
                         assumenda
                         tenetur neque commodi expedita modi maxime dicta. Unde
                     </p>
-                    <img src="images/history-image.jpg" alt="History Image">
+                    <img src="images/history-image.jpg" alt="image of empty rafts">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad provident
                         voluptates
@@ -58,30 +56,25 @@
             </section>
             <section class="adventure">
                 <h2>Adventure Awaits You!</h2>
-
                 <div class="adventure-pics">
                     <figure>
-                        <img src="images/adv-pic-one.jpg" alt="caption1">
+                        <img src="images/adv-pic-one.jpg" alt="Picture of Helmets">
                         <figcaption>Education</figcaption>
                     </figure>
-
                     <figure>
-                        <img src="images/adv-pic-two.jpg" alt="caption1">
+                        <img src="images/adv-pic-two.jpg" alt="Picture of Paddling Team">
                         <figcaption>Build Connections</figcaption>
                     </figure>
-
                     <figure>
-                        <img src="images/adv-pic-four.jpg" alt="caption1">
+                        <img src="images/adv-pic-four.jpg" alt="Picture of paddle training">
                         <figcaption>Training</figcaption>
                     </figure>
-
                     <figure>
-                        <img src="images/adv-pic-three.jpg" alt="caption1">
+                        <img src="images/adv-pic-three.jpg" alt="picture of open river">
                         <figcaption>Chart Your Course</figcaption>
                     </figure>
-
                     <figure>
-                        <img src="images/adv-pic-five.jpg" alt="caption1">
+                        <img src="images/adv-pic-five.jpg" alt="picture of group rafting">
                         <figcaption>Shred some Rapids</figcaption>
                     </figure>
                 </div>
