--- a/week05/table.html
+++ b/week05/table.html
@@ -54,7 +54,11 @@
             <td>92</td>
         </tfoot>
     </table>
-
+    <form>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username">
+        <button type="submit">submit</button>
+    </form>
 </body>
 
 </html>
