--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-      content="Information for a Rafting Website, with links to book a trip and see stories from other people.">
+      content="Information for White Water Rafting LLC, with links to book a trip and see stories from other people.">
     <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About Us | White Water Rafting LLC</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header class="site-header">
-        <img src="images/logo.jpg" alt="logo" width="200">
+        <img src="images/logo.jpg" alt="White Water Rafting LLC Logo" width="200">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -83,7 +83,7 @@
     </main>
     <footer>
         <p>
-            &copy; | 2026 | Emler Rafting LLC | Kyle Emler
+            &copy; | 2026 | White Water Rafting LLC | Kyle Emler
         </p>
         <nav class="socialmedia">
             <a href="">
