--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,38 +33,51 @@
             <div class="map">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5410.351603923443!2d-92.81266414144194!3d35.978282132183956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1770438905104!5m2!1sen!2sus"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                  width="400" height="300" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name">
+                <div class="name-email">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email">
+                </div>
 
-                <p>Message Purpose</p>
-                <label>
-                    <input type="radio" name="purpose" value="general">
-                    General Inquiry
-                </label>
-                <label>
-                    <input type="radio" name="purpose" value="reservation">
-                    Reservation Question
-                </label>
-                <label>
-                    <input type="radio" name="purpose" value="suggestion">
-                    Website Suggestion
-                </label>
+                <div class="radio">
+                    <p>Message Purpose</p>
+                    <div class="buttons">
+                        <label>
+                            <input type="radio" name="purpose" value="general">
+                            General Inquiry
+                        </label>
+                        <label>
+                            <input type="radio" name="purpose" value="reservation">
+                            Reservation Question
+                        </label>
+                        <label>
+                            <input type="radio" name="purpose" value="suggestion">
+                            Website Suggestion
+                        </label>
+                    </div>
+                </div>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message"></textarea>
+                <div class="message">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message"></textarea>
+                </div>
 
-                <input type="checkbox" id="subscribe" name="subscribe">
-                <label for="subscribe">Please Subscribe to the Monthly
-                    Newsletter!</label>
+                <div class="checkbox">
+                    <input type="checkbox" id="subscribe" name="subscribe">
+                    <label for="subscribe">Please Subscribe Me to the Monthly
+                        Newsletter!</label>
+                </div>
 
-                <input type="submit" value="Get in Touch!">
+                <div class="submit">
+                    <label for="submit"></label>
+                    <input type="submit" name="submit" id="submit" value="Get in Touch!">
+                </div>
             </form>
         </section>
         <section class="profiles">
