--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -49,15 +49,15 @@
                     <p>Message Purpose</p>
                     <div class="buttons">
                         <label>
-                            <input type="radio" name="purpose" value="general">
+                            <input type="radio" name="purpose" id="general" value="general">
                             General Inquiry
                         </label>
                         <label>
-                            <input type="radio" name="purpose" value="reservation">
+                            <input type="radio" name="purpose" id="reservation" value="reservation">
                             Reservation Question
                         </label>
                         <label>
-                            <input type="radio" name="purpose" value="suggestion">
+                            <input type="radio" name="purpose" id="suggestion" value="suggestion">
                             Website Suggestion
                         </label>
                     </div>
