--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-      content="A Form to provide contact information for White Water Rafting LLC to contact. Available for Questions, Reservations or Suggestions.">
+      content="White Water Rafting LLC Home Page. Get info for Trips, Contact or About Us. Sign up for Newsletters or check out the awesome guides we have.">
     <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>Home | White Water Rafting LLC</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header class="site-header">
-        <img src="images/logo.jpg" alt="White Water Rafting LLC logo" width="200">
+        <img src="images/logo.jpg" alt="White Water Rafting LLC logo" width="150">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -42,14 +42,14 @@
             <div class="desc">
                 <figure>
                     <img src="images/home-desc1.jpg"
-                      alt="a photo of people white water rafting over light rapids in a yello raft">
+                      alt="a photo of people white water rafting over light rapids in a yellow raft">
                     <figcaption>We offer the best tour guides in the state with over 50 years
                         combined experience!</figcaption>
                 </figure>
                 <figure>
                     <img src="images/home-desc2.jpg"
                       alt="a photo of people white water rafting over heavy rapids in a yellow raft">
-                    <figcaption>We deliver an exceptional experience every time, guarenteed to make
+                    <figcaption>We deliver an exceptional experience every time, guaranteed to make
                         you
                         say, "Oh Yeah!"</figcaption>
                 </figure>
