--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-      content="Information for White Water Rafting LLC, with links to book a trip and see stories from other people.">
+      content="Learn about White Water Rafting LLC, our history, expert guides, and adventurous rafting experiences. Book a trip or explore our story.">
     <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About Us | White Water Rafting LLC</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header class="site-header">
-        <img src="images/logo.jpg" alt="White Water Rafting LLC Logo" width="200">
+        <img src="images/logo.jpg" alt="White Water Rafting LLC Logo" width="150">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
