--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-      content="A Form to provide contact information for White Water Rafting LLC to contact. Available for Questions, Reservations or Suggestions.">
+      content="Contact White Water Rafting LLC for questions, reservations, or suggestions. Fill out our contact form or view our team profiles.">
     <meta name="author" content="Kyle Emler">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>Contact Us | White Water Rafting LLC</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header class="site-header">
-        <img src="images/logo.jpg" alt="logo" width="200">
+        <img src="images/logo.jpg" alt="logo" width="150">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -75,7 +75,6 @@
                 </div>
 
                 <div class="submit">
-                    <label for="submit"></label>
                     <input type="submit" name="submit" id="submit" value="Get in Touch!">
                 </div>
             </form>
@@ -98,7 +97,7 @@
     </main>
     <footer>
         <p>
-            &copy; | 2026 | Emler Rafting LLC | Kyle Emler
+            &copy; | 2026 | White Water Rafting LLC | Kyle Emler
         </p>
         <nav class="socialmedia">
             <a href="">
